# portfolio

./: .gitignore  CNAME  asset-manifest.json  index.html  package-lock.json  package.json
backend/: .env  pyproject.toml
backend/portfolio/: settings.py  urls.py  views.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: AppContainer.js  ContextMenu.js  Loader.js  ToolBar.js  ToolBar2.js
frontend/src/config/: apps.js
frontend/src/utils/: time.js
src/: App.js
src/components/: AppContainer.js
static/css/: main.9a48d959.css  main.ee039614.css  main.ee039614.css.map
static/js/: 246.969afd1d.chunk.js  246.969afd1d.chunk.js.map  246.d65b3d83.chunk.js  246.d65b3d83.chunk.js.map  301.4156af75.chunk.js  301.4156af75.chunk.js.map  301.58fddc67.chunk.js.map  378.58ea68b8.chunk.js  378.683b91a3.chunk.js  378.683b91a3.chunk.js.map  406.e3c30a3b.chunk.js.map  406.fbea5b37.chunk.js  406.fbea5b37.chunk.js.map  566.07e73ebb.chunk.js  566.07e73ebb.chunk.js.map  637.e4e6e488.chunk.js  637.e4e6e488.chunk.js.map  main.4134341d.js  main.4134341d.js.map  main.4b9cbe09.js  main.4b9cbe09.js.LICENSE.txt  main.4b9cbe09.js.map  main.5173caa9.js.map  main.584f8153.js  main.584f8153.js.map  main.61e8e947.js  main.61e8e947.js.map  main.6a492a9c.js  main.6a492a9c.js.map  main.6f0ca9a8.js  main.6f0ca9a8.js.map  main.7eb59f6f.js  main.7eb59f6f.js.LICENSE.txt  main.7eb59f6f.js.map  main.94ac9dab.js  main.94ac9dab.js.LICENSE.txt  main.94ac9dab.js.map  main.9b744ba8.js  main.9b744ba8.js.map  main.9d7738e9.js  (+7 more)
(+28 files in other folders)
