[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ikabir21 <ichankabir@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
djangorestframework = "^3.13.1"
whitenoise = "^6.0.0"
psycopg2-binary = "^2.9.3"
waitress = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
